2012-07-04  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/53849
	* tree-cfg.c (move_stmt_op): Only call add_referenced_var
	for duplicated locals.  Use add_referenced_var_1 to avoid
	pushing/popping cfun.

	* gcc.dg/pr53849.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@189255 138bc75d-0d04-0410-961f-82ee72b054a4